--- a/test.tex
+++ b/test.tex
@@ -161,6 +161,24 @@
 
 \subsection{Introduction}\label{introduction}
 
+Over the years, there has been an increase in the health awareness of
+the Scottish population, with a fear that the country as a whole is
+becoming overweight. The body mass index (BMI) is a quick way to measure
+weight relative to height, and screen for people that are underweight,
+overweight, or obese.
+
+We aim to answer two questions:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Has the BMI in Scotland changed over the given years of the Scottish
+  Health Survey?
+\item
+  Are there any difference in the BMI distributions by age, gender,
+  socio-economic status or lifestyle factors?
+\end{enumerate}
+
 \subsection{Exploratory Analysis}\label{exploratory-analysis}
 
 \subsection{Formal Analysis}\label{formal-analysis}
