--- a/Group_6_Analysis.qmd
+++ b/Group_6_Analysis.qmd
@@ -4,6 +4,19 @@ format: pdf
 editor: visual
 ---
 
+```{r}
+#| echo: false
+#| warning: false
+#| message: false
+
+library(tidyverse)
+library(tidymodels)
+library(performance)
+library(tinytex)
+
+BMI <- read.csv("DAProject12.csv")
+```
+
 ## Introduction
 
 Over the years, there has been an increase in the health awareness of the Scottish population, with a fear that the country as a whole is becoming overweight. The body mass index (BMI) is a quick way to measure weight relative to height, and screen for people that are underweight, overweight, or obese.
@@ -17,5 +30,63 @@ We aim to answer two questions:
 ## Exploratory Analysis
 
 ## Formal Analysis
+
+### Question 2
+
+To answer the second question, we use linear regression to find out if age, gender, socio-economic status, or lifestyle factors are significant predictors for obesity.
+
+We start by looking at if age is a significant predictor.
+
+```{r}
+#| echo: false
+#| eval: true
+BMI$BMIgroup <- as.factor(BMI$BMIgroup)
+levels(BMI$BMIgroup) <- c("Not Obese", "Obese", "Not Obese", "Not Obese")
+
+# Regression to check if Age is a significant predictor
+model_age <- glm(BMIgroup ~ Age,
+                     data = BMI,
+                     family = binomial)
+
+# Interpretation is in log-odds!
+model_age %>% tidy(conf.int = T)
+
+# Model diagnostics - Checking for overdispersion
+check_overdispersion(model_age)
+```
+
+We now look at sex to consider if it is significant
+
+```{r}
+#| echo: false
+#| eval: true
+# Regression to check if Sex is a significant predictor
+model_sex <- glm(BMIgroup ~ Sex,
+                     data = BMI,
+                     family = binomial)
+
+# Interpretation is in the log-odds scale
+model_sex %>% tidy(conf.int = T) # P-value of 0.0247 -> sex is significant
+
+# Then checking for overdispersion
+check_overdispersion(model_sex)
+```
+
+We now look at education to consider if there is a difference in obesity based on socio-economic factors
+
+```{r}
+#| echo: false
+#| eval: true
+# Regression to check if the various levels of education are significant as predictors
+model_edu <- glm(BMIgroup ~ Education,
+                     data = BMI,
+                     family = binomial)
+
+# interpretation is in the log-odds scale
+model_edu %>% tidy(conf.int = T) # All are significant
+
+# We again check for overdispersion
+check_overdispersion(model_edu)
+```
 
 ## Conclusion
