--- a/Data analysis 12.qmd
+++ b/Data analysis 12.qmd
@@ -85,7 +85,7 @@ To answer the second question, we use linear regression to find out if age, gend
 
 We start by looking at if age is a significant predictor for a persons BMI group. We are fitting the following linear model: 
 $$
-y_i = \beta_0 + \beta_1 x_i + \epsilon_i, ~~~~~ \epsilon_i \sim N(0, \sigma^2), ~~~~~ i = 1, ... , 14017
+log(\frac{obese}{1 - obese}) = \beta_0 + \beta_1 x_i + \epsilon_i, ~~~~~ \epsilon_i \sim N(0, \sigma^2), ~~~~~ i = 1, ... , 14017
 $$
 
 Here, $y_i$ is the BMI group of the ith individual, $x_i$ is the age of the ith individual, and $\beta_0$, $\beta_1$ are regression coefficients
@@ -140,15 +140,17 @@ Where $x_i$ is an indicator variable taking the value 1 if the individual is a m
 #| warnings: false
 #| message: false
 
-# Regression to check if Sex is a significant predictor
+BMI$Sex <- as.factor(BMI$Sex)
+BMI$Sex <- relevel(BMI$Sex, ref = "Male")
+
 model_sex <- glm(BMIgroup ~ Sex,
                      data = BMI,
                      family = binomial)
-
+                     
 tab_model(model_sex, show.obs = FALSE)
 ```
 
-As seen from table 2, the p-value indicates that sex is a significant predictor at the 5% significance level. Furthermore, the log odds of being obese increase by  1.12 if the individual is a male.
+As seen from table 2, the p-value indicates that sex is a significant predictor at the 5% significance level. Furthermore, the odds ratio for being obese increase by 0.89 for females.
 
 Again, we check our model assumptions to find out if our results are valid.
 
