--- a/Data analysis 12 (1) (1).qmd
+++ b/Data analysis 12 (1) (1).qmd
@@ -19,9 +19,10 @@ library(performance)
 library(tinytex)
 library(skimr)
 library(kableExtra)
+library(sjPlot)
 
 
-obesity <- read.csv("~/Downloads/DAProject12.csv")
+obesity <- read.csv("DAProject12.csv")
 BMI <- obesity
 ```
 
@@ -269,62 +270,128 @@ Overall, all statistical tests confirm that obesity prevalence in Scotland has r
 
 To answer the second question, we use linear regression to find out if age, gender, socio-economic status, or lifestyle factors are significant predictors for obesity.
 
-We start by looking at if age is a significant predictor.
+We start by looking at if age is a significant predictor for a persons BMI group. We are fitting the following linear model: 
+
+$$
+logit(\pi) = \beta_0 + \beta_1 x_i + \epsilon_i, ~~~~~ \epsilon_i \sim N(0, \sigma^2), ~~~~~ i = 1, ... , 14017
+$$
+
+Here, $\pi$ is the probability that the individual is obese, $x_i$ is the age of the ith individual, and $\beta_0$, $\beta_1$ are regression coefficients. We are using the logit link function.
 
 ```{r}
 #| echo: false
 #| eval: true
+#| tab-cap: output from linear regression with age as the predictor
+#| label: tab-regression1
+#| warnings: false
+#| message: false
+
+
 BMI$BMIgroup <- as.factor(BMI$BMIgroup)
 levels(BMI$BMIgroup) <- c("Not Obese", "Obese", "Not Obese", "Not Obese")
+BMI$BMIgroup <- relevel(BMI$BMIgroup, ref = "Obese")
+
 
 # Regression to check if Age is a significant predictor
 model_age <- glm(BMIgroup ~ Age,
                      data = BMI,
                      family = binomial)
 
-# Interpretation is in log-odds!
-model_age %>% tidy(conf.int = T)
-
-# Model diagnostics - Checking for overdispersion
-check_overdispersion(model_age)
+tab_model(model_age, show.r2 = FALSE, show.obs = FALSE)
 ```
+As seen from the p-value, we can infer that age is a significant predictor for a persons BMI group. As someones age increases by one year, the odds of the person being obese increase by a factor of 0.99. 
 
-We now look at sex to consider if it is significant
+We now check the assumptions of our model, to find out if the model is valid.
+
+``` {r}
+#| label: fig-diagnostics1
+#| fig-cap: Diagnostic plots for the age model
+
+# Model diagnostics
+check_model(model_age, panel = TRUE)
+```
+There is no issues that can be seen in the posterior predictive check, influential obesvations graph, and the uniformity of resuduals graph. There does appear to be a large amount of points falling outiwth the error bounds in the binned residuals graph. We would expect about 95% of points to fall within the error bounds if the model is true. As there is a large amount of points plotted it is hard to tell if there is 95% within the error bounds, as there may be overlap. However, it appears to be good enough. 
+
+We now look at sex to consider if it is significant through fitting the following model:
+
+$$
+logit(\pi) = \beta_0 + \beta_1 x_i + \epsilon_i, ~~~~~ \epsilon_i \sim N(0, \sigma^2), ~~~~~ i = 1, ... , 14017
+$$
+
+Where $x_i$ is an indicator variable taking the value 0 if the individual is a male and the value 1 if the individual is a female.
 
 ```{r}
 #| echo: false
 #| eval: true
-# Regression to check if Sex is a significant predictor
+#| tab-cap: output from linear regression with sex as the predictor
+#| label: tab-regression2
+#| warnings: false
+#| message: false
+
+BMI$Sex <- as.factor(BMI$Sex)
+BMI$Sex <- relevel(BMI$Sex, ref = "Male")
+
 model_sex <- glm(BMIgroup ~ Sex,
                      data = BMI,
                      family = binomial)
-
-# Interpretation is in the log-odds scale
-model_sex %>% tidy(conf.int = T) # P-value of 0.0247 -> sex is significant
-
-# Then checking for overdispersion
-check_overdispersion(model_sex)
+                     
+tab_model(model_sex, show.obs = FALSE)
 ```
 
-We now look at education to consider if there is a difference in obesity based on socio-economic factors
+As seen from table 2, the p-value indicates that sex is a significant predictor at the 5% significance level. Furthermore, the odds ratio for being obese increase by 0.89 for females.
+
+Again, we check our model assumptions to find out if our results are valid.
+
+```{r}
+#| label: fig-diagnostics2
+#| fig-cap: Diagnostic plots for the sex model
+
+# Model diagnostics
+check_model(model_sex, panel = TRUE)
+```
+The plots in figure 2 look good enough. There may be issues with the binned residuals plot, however the issue likely stems from sex being a factor with 2 levels giving us only 2 points.
+
+We now look at education to consider if there is a difference in obesity based on socio-economic factors. We fit the following model: 
+
+$$
+logit(\pi) = \beta_0 + \beta_1 x_i + \beta_2 x_j + \beta_3 x_k + \beta_4 x_l +\beta_5 x_m + \beta_6 x_n + \epsilon_i, ~~~~~ \epsilon_i \sim N(0, \sigma^2), ~~~~~ i = 1, ... , 14017
+$$
+Where $x_i$ through $x_n$ are indicator variables taking the value 1 if they have that level of education and 0 if they do not. The $\beta_0$ term refers to the referrence level which is having a degree.
 
 ```{r}
 #| echo: false
 #| eval: true
+#| tab-cap: output from linear regression with education as the predictor
+#| label: tab-regression3
+#| warnings: false
+#| message: false
+
 # Regression to check if the various levels of education are significant as predictors
 model_edu <- glm(BMIgroup ~ Education,
                      data = BMI,
                      family = binomial)
 
-# interpretation is in the log-odds scale
-model_edu %>% tidy(conf.int = T) # All are significant
-
-# We again check for overdispersion
-check_overdispersion(model_edu)
+tab_model(model_edu, show.obs = F)
 ```
+
+As seen from table 3, all the levels of education are considered significant predictors of the persons BMI group. The odds of a person being obese is 3.05 for a person with a degree, then increases by 0.53-0.84 depending on qualification level. 
+
+Again, we have to check the model assumptions. 
+
+```{r}
+#| label: fig-diagnostics3
+#| fig-cap: Diagnostic plots for the education model
+
+# Model diagnostics
+check_model(model_edu, panel = TRUE)
+```
+
+The interpretation of figure 3 is much like the previous figures. The only graph that leaves cause for concern is the binned residuals graph, but again, becuase it is a factor, it is always going to not work as well as a continuous variable. Thus, the model is appropriate.
 
 ## Results {#sec-results}
 
 # Conclusions {#sec-conc}
 
 > > > > > > > Formal-Analysis-Q2
+
+From the previous tests, we have seen that age, sex, and education are all significant in the prediction of an individuals BMI group, indicating differences in obesity across these factors. As age increases, the odds of obesity rise. Females have higher odds of being obese than males, and lower education levels are associated with greater odds of obesity.
