--- a/Data analysis 12 main.qmd
+++ b/Data analysis 12 main.qmd
@@ -88,7 +88,7 @@ ggplot(obesity, aes(x = Sex, fill = BMIgroup)) +
   theme_minimal()
 ```
 
-Finally, we want to assess the relationship between Education and BMIgroup. In @fig-bar3 shows that the education level is related to BMI groups. Individuals with higher educational qualifications generally have higher proportions of normal weight and lower proportions of obesity. Conversely, individuals with fewer or no qualifications show a greater proportion of obesity. Socio-economic factors, represented by education levels, clearly impact obesity rates.
+To assess the impact of socio-economic status, we look at BMI distributions across education levels. Figure 4 shows that individuals with higher education levels (e.g., degrees) tend to have higher proportions of normal weight and lower obesity rates. In contrast, individuals with no qualifications show higher rates of obesity. This highlights how education---and by extension, socio-economic status---may influence obesity.
 
 ```{r}
 #| echo: false
@@ -103,6 +103,8 @@ ggplot(obesity, aes(x = Education, fill = BMIgroup)) +
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
+
+In summary, our exploratory analysis reveals that while overall BMI trends remained stable between 2013 and 2016, there are notable differences in BMI distributions based on age, gender, socio-economic status, and lifestyle factors. Older age, lower education, and poor dietary habits are associated with higher obesity rates, while gender differences also influence BMI group proportions.
 
 # Formal data analysis {#sec-formdata}
 
@@ -138,7 +140,7 @@ tab_model(glm_model, show.r2 = FALSE, show.obs = FALSE)
 
 ```
 
-The formal analysis of obesity prevalence trends in Scotland, using data from the Scottish Health Survey, reveals no statistically significant change over the surveyed years (2013–2016). The Chi-squared Test for Trend in Proportions (X²=0.114, p=0.736) and Pearson’s Chi-squared Test (X²=0.226, p=0.973) both fail to reject the null hypothesis, indicating no evidence of a linear trend or overall difference in obesity proportions across the years. This conclusion is further supported by the logistic regression results, where the "Year" variable shows an odds ratio of 1.01 (95% CI: 0.97–1.04, p=0.736), suggesting that each passing year was associated with a non-significant change in obesity odds. The intercept (OR=0.43, p<0.001) reflects the baseline odds of obesity but does not inform temporal trends. Overall, these results demonstrate that obesity prevalence in Scotland remained stable during the study period, with no meaningful increase or decrease detected.
+The formal analysis of obesity prevalence trends in Scotland, using data from the Scottish Health Survey, reveals no statistically significant change over the surveyed years (2013--2016). The Chi-squared Test for Trend in Proportions (X²=0.114, p=0.736) and Pearson's Chi-squared Test (X²=0.226, p=0.973) both fail to reject the null hypothesis, indicating no evidence of a linear trend or overall difference in obesity proportions across the years. This conclusion is further supported by the logistic regression results, where the "Year" variable shows an odds ratio of 1.01 (95% CI: 0.97--1.04, p=0.736), suggesting that each passing year was associated with a non-significant change in obesity odds. The intercept (OR=0.43, p\<0.001) reflects the baseline odds of obesity but does not inform temporal trends. Overall, these results demonstrate that obesity prevalence in Scotland remained stable during the study period, with no meaningful increase or decrease detected.
 
 ### Question 2
 
@@ -278,6 +280,6 @@ The analysis of the Scottish Health Survey data suggests that there has been no 
 
 -   Males tend to have a higher proportion of overweight individuals, whereas females exhibit relatively greater proportions in the normal and obese BMI categories.
 
--    Higher educational qualifications are associated with a lower prevalence of obesity, whereas individuals with fewer or no qualifications tend to have a higher proportion of obesity.
+-   Higher educational qualifications are associated with a lower prevalence of obesity, whereas individuals with fewer or no qualifications tend to have a higher proportion of obesity.
 
 These findings suggest that while overall obesity rates have remained stable, socio-demographic factors such as age, gender, and education level significantly influence obesity.
